--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
+    "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.4",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
