--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "web-push": "^3.6.7",
+    "yahoo-finance2": "^2.13.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
